Añadi el modulo de idiomas con barras de progreso

--- a/index.html
+++ b/index.html
@@ -70,20 +70,9 @@
             </div>
         </div>
     </section>
-    <section class="Conocimietos">
-        <h2>Conocimientos</h2>
-        <div class="conocimientos-container">
-            <div><img src="" alt="Html icon"></div>
-            <div><img src="" alt="CSS icon"></div>
-            <div><img src="" alt="Javascript icon"></div>
-            <div><img src="" alt="MySQL icon"></div>
-            <div><img src="" alt="Git icon"></div>
-            <div><img src="" alt="GitHub icon"></div>
-        </div>
-    </section>
     <section class="idiomas">
         <h2>Idiomas</h2>
-        <div class="idomas-container">
+        <!-- <div class="idomas-container">
             <div class="card-idiomas">
                 <h4>Español</h4>
                 <div class="barraProgreso-idiomas">
@@ -98,6 +87,30 @@
                     <p>80%</p>
                 </div>
             </div>
+        </div> -->
+
+        <div class="wrap-circles">
+            <div class="circle per-0 espanol">
+                <h4>Español</h4>
+                <div class="inner">100%</div>
+            </div>
+            <div class="circle per-25 ingles">
+                <h4>Ingles</h4>
+                <div class="inner">80%</div>
+            </div>
+        </div>
+
+
+    </section>
+    <section class="Conocimietos">
+        <h2>Conocimientos</h2>
+        <div class="conocimientos-container">
+            <div><img src="" alt="Html icon"></div>
+            <div><img src="" alt="CSS icon"></div>
+            <div><img src="" alt="Javascript icon"></div>
+            <div><img src="" alt="MySQL icon"></div>
+            <div><img src="" alt="Git icon"></div>
+            <div><img src="" alt="GitHub icon"></div>
         </div>
     </section>
     <section class="Contacto">
