--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Emanuel Alvarez</h1>
             <p>Estudiante de Ingnieria en Sistemas, Desarrollador y Diseñador web.</p>
                 <button>Descargar CV</button>
-                <button>Contáctame</button>
+                <a href="#Contactame"><button>Contáctame</button></a>
         </div>
     </section>
     <section class="sobreMi">
@@ -114,7 +114,7 @@
         </div>
     </section>
     <section class="Contacto">
-        <h2>Contactame</h2>
+        <h2 id="Contactame">Contactame</h2>
         <div class="contacto-container">
             <div class="contacto-box">
                 <span>.</span>
