--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </header>
     <section class="banner">
         <div class="banner-info">
-            <h2>¡Hola! Soy</h2>
+            <h2 id="upper">¡Hola! Soy</h2>
             <h1>Emanuel Alvarez</h1>
             <p>Estudiante de Ingnieria en Sistemas, Desarrollador y Diseñador web.</p>
-                <button>Descargar CV</button>
+                <a href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><button>Descargar CV</button></a>
                 <a href="#Contactame"><button>Contáctame</button></a>
         </div>
     </section>
@@ -105,30 +105,51 @@
     <section class="Conocimietos">
         <h2>Conocimientos</h2>
         <div class="conocimientos-container">
-            <div><img src="" alt="Html icon"></div>
-            <div><img src="" alt="CSS icon"></div>
-            <div><img src="" alt="Javascript icon"></div>
-            <div><img src="" alt="MySQL icon"></div>
-            <div><img src="" alt="Git icon"></div>
-            <div><img src="" alt="GitHub icon"></div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/htmlIcon.svg" alt="Html icon">
+                <h4>HTML</h4>
+            </div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/cssIcon.svg" alt="CSS icon">
+                <h4>CSS</h4>
+            </div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/jsIconMain.svg" alt="Javascript icon">
+                <h4>JavaScript</h4>
+            </div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/databaseIcon.svg" alt="MySQL icon">
+                <h4>MySQL</h4>
+            </div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/gitIcon.svg" alt="Git icon">
+                <h4>Git</h4>
+            </div>
+            <div class="icon-container">
+                <img class="conocimientos-img" src="./assets/icon/jsIconMain.svg" alt="GitHub icon">
+                <h4>GitHub</h4>
+            </div>
         </div>
     </section>
     <section class="Contacto">
         <h2 id="Contactame">Contactame</h2>
         <div class="contacto-container">
             <div class="contacto-box">
-                <span>.</span>
+                <span class="tel1"></span>
                 <a href="tel:+50251884015">Telefono</a>
             </div>
             <div class="contacto-box">
-                <span>.</span>
-                <a href="mailto:alvarezema9@gmail.com">Correo</a>
+                <span class="whatsapp"></span></span>
+                <a href="https://wa.me/50251884015">Whatsapp</a>
             </div>
             <div class="contacto-box">
-                <span>.</span>
-                <a href="https://www.instagram.com/emanuel.alv_/">Instagram</a>
+                <span class="mail"></span></span>
+                <a href="mailto:alvarezema9@gmail.com">Correo</a>
             </div>
         </div>
+        <!-- BOTON FLOTANTE================== -->
+        
+        <a class="padre" href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><img src="./assets/icon/download.svg" alt=""></a>
     </section>
 </body>
 </html>
