Cambio de color iconos de botones de contacto

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>Portafolio Emanuel Alvarez</title>
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <ul class="nav-section">
                 <li><a href="">Conocimientos</a></li>
                 <li><a href="">Habilidades</a></li>
                 <li><a href="">Proyectos</a></li>
-                <!-- <li><a href="">Certificados</a></li> -->
+                <li><a href="">Certificados</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <section class="banner">
         <div class="banner-info">
             <h2 id="upper">¡Hola! Soy</h2>
@@ -134,22 +134,28 @@
     <section class="Contacto">
         <h2 id="Contactame">Contactame</h2>
         <div class="contacto-container">
-            <div class="contacto-box">
-                <span class="tel1"></span>
-                <a href="tel:+50251884015">Telefono</a>
-            </div>
-            <div class="contacto-box">
-                <span class="whatsapp"></span></span>
-                <a href="https://wa.me/50251884015">Whatsapp</a>
-            </div>
-            <div class="contacto-box">
-                <span class="mail"></span></span>
-                <a href="mailto:alvarezema9@gmail.com">Correo</a>
-            </div>
+            <a href="tel:+50251884015">
+                <div class="contacto-box">
+                    <span class="tel1"></span>
+                    <p>Telefono</>
+                </div>
+            </a>
+            <a href="https://wa.me/50251884015">
+                <div class="contacto-box">
+                    <span class="whatsapp"></span></span>
+                    <p>Whatsapp</p>
+                </div>
+            </a>
+            <a href="mailto:alvarezema9@gmail.com">
+                <div class="contacto-box">
+                    <span class="mail"></span></span>
+                    <p>Correo</p>
+                </div>
+            </a>
         </div>
         <!-- BOTON FLOTANTE================== -->
         
-        <a class="padre" href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><img src="./assets/icon/download.svg" alt=""></a>
+        <a class="padre" href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><img class="little-icons" src="./assets/icon/download.svg" alt=""></a>
     </section>
 </body>
 </html>
