Adicion de links a certificados

--- a/index.html
+++ b/index.html
@@ -43,32 +43,46 @@
     <section class="certificados">
         <h2>Certificados</h2>
         <div class="certificados-container">
-            <div class="tarjeta-certificados">
-                <img src="https://static.platzi.com/media/achievements/badge-curso-practico-frontend-developer-d28c2eb0-cd3e-4951-bb96-5f1bcab2add5.png" alt="Icno del certificado">
-                <h4>Curso Practico de Frontend Developer</h4>
-                <p>En este curso aprendí sobre maquetación con HTML y CSS para construir las páginas y componentes de un e-commerce profesional.</p>
-            </div>
+            <a href="https://platzi.com/p/Emanuel-Alvarez/curso/2467-frontend-developer/diploma/detalle/">
+                <div class="tarjeta-certificados">
+                    <img src="https://static.platzi.com/media/achievements/badge-curso-practico-frontend-developer-d28c2eb0-cd3e-4951-bb96-5f1bcab2add5.png" alt="Icno del certificado">
+                    <h4>Curso Practico de Frontend Developer</h4>
+                    <p>En este curso aprendí sobre maquetación con HTML y CSS para construir las páginas y componentes de un e-commerce profesional.</p>
+                </div>
+            </a>
+           <a href="https://platzi.com/p/Emanuel-Alvarez/curso/2030-mobile-first/diploma/detalle/">
             <div class="tarjeta-certificados">
                 <img src="https://static.platzi.com/media/achievements/badge-responsive-design-ce53c4fc-a4c3-41e1-a5c8-3931932343a6.png" alt="Icno del certificado">
                 <h4>Curso Responsive Design y Mobile First</h4>
                 <p>En este curso aprendí todo lo necesario para crear proyectos que se adaptarán a las distintas vistas que utilicen tus usuarios,  convirtiendo una prioridad el desarrollar frontend para smartphones, tablets y laptops.</p>
             </div>
+           </a>
+           <a href="https://platzi.com/p/Emanuel-Alvarez/curso/1557-git-github/diploma/detalle/">
             <div class="tarjeta-certificados">
                 <img src="https://static.platzi.com/media/achievements/badge-github-0b729570-934d-47d8-ba6b-610d7f15e0ec.png">
                 <h4>Curso Profesional de Git y Github</h4>
                 <p>En este curso aprendí a trabajar con git, conceptos básicos, clonar un repositorios y gestionar tus proyectos alojándolos en mi repositorio local y en GitHub.</p>
             </div>
-            <div class="tarjeta-certificados">
-                <img src="https://static.platzi.com/media/achievements/badge-fundamentos-de-bases-de-datos-cc5eff2a-a7e0-4110-af5d-a47b628611da.png">
-                <h4>Curso de Fundamentos de Bases de Datos</h4>
-                <p>En este curso aprendí  los fundamentos de diseño y modelado requeridos para tener la mejor arquitectura posible al momento de crear Bases de Datos.</p>
-            </div>
-            <div class="tarjeta-certificados">
-                <img src="https://static.platzi.com/media/achievements/badge-basicojs-e2ead888-428e-4f55-962c-8894aeaeacda.png">
-                <h4>Curso Básico de Javascript</h4>
-                <p>En este curso aprendí los conceptos básicos y mas clave de javascript como lo son: variables, funciones y objetos. Como tambien aprendí sobre el scope y los loops.</p>
-            </div>
+           </a>
+            <a href="https://platzi.com/p/Emanuel-Alvarez/curso/1566-bd/diploma/detalle/">
+                <div class="tarjeta-certificados">
+                    <img src="https://static.platzi.com/media/achievements/badge-fundamentos-de-bases-de-datos-cc5eff2a-a7e0-4110-af5d-a47b628611da.png">
+                    <h4>Curso de Fundamentos de Bases de Datos</h4>
+                    <p>En este curso aprendí  los fundamentos de diseño y modelado requeridos para tener la mejor arquitectura posible al momento de crear Bases de Datos.</p>
+                </div>
+            </a>
+            <a href="https://platzi.com/p/Emanuel-Alvarez/curso/1814-basico-javascript/diploma/detalle/">
+                <div class="tarjeta-certificados">
+                    <img src="https://static.platzi.com/media/achievements/badge-basicojs-e2ead888-428e-4f55-962c-8894aeaeacda.png">
+                    <h4>Curso Básico de Javascript</h4>
+                    <p>En este curso aprendí los conceptos básicos y mas clave de javascript como lo son: variables, funciones y objetos. Como tambien aprendí sobre el scope y los loops.</p>
+                </div>
+            </a>
         </div>
+        <div class="boton-certificados--Container">
+            <a href="https://platzi.com/p/Emanuel-Alvarez/"><button class="boton-certificados">Ver todos los certificados</button></a>
+        </div>
+        
     </section>
     <section class="idiomas">
         <h2>Idiomas</h2>
