--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/mobile.css">
+    <link rel="stylesheet" href="./CSS/tablet.css" media="(min-width: 1400px)">
     <title>Portafolio Emanuel Alvarez</title>
 </head>
 <body>
@@ -26,8 +27,11 @@
             <h2 id="upper">¡Hola! Soy</h2>
             <h1>Emanuel Alvarez</h1>
             <p>Estudiante de Ingnieria en Sistemas, Desarrollador y Diseñador web.</p>
+            <div class="banner-button--container">
                 <a href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><button>Descargar CV</button></a>
                 <a href="#Contactame"><button>Contáctame</button></a>
+            </div>
+
         </div>
     </section>
     <section class="sobreMi">
@@ -140,13 +144,13 @@
                 <h4>Git</h4>
             </div>
             <div class="icon-container">
-                <img class="conocimientos-img" src="./assets/icon/jsIconMain.svg" alt="GitHub icon">
+                <img class="conocimientos-img" src="./assets/icon/github2.svg" alt="GitHub icon">
                 <h4>GitHub</h4>
             </div>
         </div>
     </section>
     <section class="Contacto">
-        <h2 id="Contactame">Contactame</h2>
+        <h2 id="Contactame">Contáctame</h2>
         <div class="contacto-container">
             <a href="tel:+50251884015">
                 <div class="contacto-box">
