Se cambio el archivo de descarga del CV en header y boton flotante

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Emanuel Alvarez</h1>
             <p>Estudiante de Ingnieria en Sistemas, Desarrollador y Diseñador web.</p>
             <div class="banner-button--container">
-                <a href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><button>Descargar CV</button></a>
+                <a href="./assets/Docs/Curriculum Emanuel Alvarez.pdf" download="Emanuel Alvarez CV"><button>Descargar CV</button></a>
                 <a href="#Contactame"><button>Contáctame</button></a>
             </div>
 
@@ -173,7 +173,7 @@
         </div>
         <!-- BOTON FLOTANTE================== -->
         
-        <a class="padre" href="./assets/Docs/Emanuel Alvarez CV 2.0.pdf" download="Emanuel Alvarez CV"><img class="little-icons" src="./assets/icon/download.svg" alt=""></a>
+        <a class="padre" href="./assets/Docs/Curriculum Emanuel Alvarez.pdf" download="Emanuel Alvarez CV"><img class="little-icons" src="./assets/icon/download.svg" alt=""></a>
     </section>
 </body>
 </html>
