correcion de errores en carpetas de paginas y html

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                     <p>Este es un proyecto de la universidad para la clase de sistemas operativos, en donde se busca entender como el sistema operativo maneja todos los procesos por medio de este programa elaborado en C#. <br> Para poder correr el ejecutable es necesario instalar .Net Framework 5.</p>
                 </div>
             </a>
-            <a href="./assets/pages/Google login Clone/index.html">
+            <a href="./assets/pages/Google_login_Clone/index.html">
                 <div class="tarjeta-certificados">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/IOS_Google_icon.png" alt="Icono de google">
                     <h4>Google Login (Solo Mobile) [HTML, CSS]</h4>
                     <p>En este proyecto aplique el conocimiento adquirido en varios cursos sobre maquetación con HTML y CSS para construir una copia identica de la pagina de login movil de Google. Para poder visualizar correctamente esta pagina modificar con devTools del navegador el dispositivo de visualizacion a un telefono.</p>
                 </div>
             </a>
-            <a href="./assets/pages/1 TiendaOnlineInteractiva/Clases/index.html">
+            <a href="./assets/pages/TiendaOnlineInteractiva/Clases/index.html">
                 <div class="tarjeta-certificados">
                     <img src="https://mispedidosenlinea.com/Assets/tienda/images/logo.png" alt="Icono de google">
                     <h4>Tienda online interactiva [HTML, CSS, Javascript]</h4>
